Fixed word spacing on categories page

--- a/src/wordbank/wordbank.css
+++ b/src/wordbank/wordbank.css
@@ -1,19 +1,4 @@
-/* .sidenav {
-    height: 100vw;
-    width: 10vw;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: white;
-    overflow-x: hidden;
-  }
-.sidenav img {
-    width: 10vw;
-    height: 10vw;
-    align-content: center;
-    display: flex;
-    justify-content: space-evenly;
-} */
+
 .tab { 
     width: 100%;
     height: 100vw;
@@ -32,21 +17,23 @@
 button{
     width: 25%;
     height: 14%;
-    text-align: center;
+    /* text-align: center; */
     margin: 2%;
     border-radius: 25px;
     font-family: "Comic Sans MS", cursive, sans-serif;
-    font-size: 3vw;
+    font-size: 2.5vw;
+    display: table-cell;
+    vertical-align: middle;
 
 }
 body{
     background-color: #FED49E;
 }
 button img{
+    float: left;
     width: 10vw;
     height: 10vw;
-    vertical-align: middle;
 }
 h1{
-    font-size: 2vw;
+    font-size: 3vw;
 }
